--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PayVault</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="main.css">
+    
+    <link rel="stylesheet" href="output.css">
 </head>
 <body class="select-none" >
     <nav  class="fixed z-50 bg-gradient-to-br from-slate-900 to-indigo-900 w-full">
